tests/paczka1/fuzzy1/11220736.err
Error in line 10: QgX0sA A471 77,4
Error in line 20: gJ9DeDpCP S280 2,1
Error in line 28: QgX0sA A286 10,2
Error in line 29: gJ9DeDpCP A471 11,9
Error in line 33: QgX0sA S480 68,9
